--- a/package.json
+++ b/package.json
@@ -4,8 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --watchAll --verbose"
+    "test": "jest --watchAll --verbose",
+    "start":"node index.js"
   },
+
+  "engines": {
+    "node":"10.9.0 "
+  },
+
   "keywords": [],
   "author": "",
   "license": "ISC",
